<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SavedFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/savedFragmentRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/savedFragmentUnsaveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:itemCount="10"
        tools:listitem="@layout/song_list_item" />

    <Button
        android:id="@+id/savedFragmentUnsaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/saved_frag_unsave_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/savedFragmentViewSongButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/savedFragmentAddToPlaylistButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/saved_frag_add_to_playlist_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/savedFragmentViewSongButton"
        app:layout_constraintTop_toTopOf="@+id/savedFragmentUnsaveButton" />

    <Button
        android:id="@+id/savedFragmentViewSongButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/saved_frag_view_song_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/savedFragmentAddToPlaylistButton"
        app:layout_constraintStart_toEndOf="@+id/savedFragmentUnsaveButton" />
</androidx.constraintlayout.widget.ConstraintLayout>